TEST_PROGRAMS/INVALID/04/0.go
package main

func main() {
    //Invalid octal
    var x = 08
    x++ // "use" x
}
